--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,85 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="styles/nav.css"  />
+    <link rel="stylesheet" href="styles/header.css"  />
+    <link rel="stylesheet" href="styles/new-tweet.css"  />
+    <link rel="stylesheet" href="styles/tweet-container.css"  />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js" integrity="sha512-rpLlll167T5LJHwp0waJCh3ZRf7pO6IT1+LZOhAyP6phAirwchClbTZV3iqL3BMrVxIYRbzGTpli4rfxsCK6Vw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+   
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <span class="logo">Tweeter</span>
+      <div>
+        <div class="new-tweet"><span class="bold">Write</span> a new tweet</div>
+        <div class="angles-down"><i class="fa-solid fa-angles-down"></i></div>
+      </div>
     </nav>
+    <header>
+      <div class="profile-img">
+        <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div class="profile-name">
+        <h2>Your Name</h2>
+      </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+        
+        <form method="POST" action="/tweets">
+          <input name="text" id="tweet-text" placeholder="What are you humming about?" class="input-bar"></input>
+          <div class="under-tweet">
+            <button class="tweet-btn" type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+
+       <!--Existing tweet containers-->
+      <section id="tweets-container">
+        <div class="tweet-container">
+          <div class="tweet-user">
+            <div class="tweet-user-name">
+              <img class="image" src="https://i.imgur.com/73hZDYK.png"></img>
+              <p class="username">Newton</p>
+            </div>
+            <div class="tweet-id">
+              <p>@SirIssac</p>
+            </div>
+          </div>
+          <article class="tweet">If I have seen further, it is by standing on the shoulders of giants.</article>
+          <footer>
+            <div>10 days ago</div>
+            <div class="small-icons">
+              <a><i class="fa-solid fa-flag"></i></a>
+              <a><i class="fa-solid fa-repeat"></i></a>
+              <a><i class="fa-solid fa-heart"></i></a>
+            </div>
+          </footer>
+        </div>
+        
+      </section>
+    </main>
   </body>
 </html>
