--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
               <img class="image" src="https://i.imgur.com/73hZDYK.png"></img>
               <p class="username">Newton</p>
             </div>
-            <div class="tweet-id">
+            <div class="tweet-user-id">
               <p>@SirIssac</p>
             </div>
           </div>
