--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       
 
       <section class="new-tweet">
-        
+        <div class='error-message'></div>
         <form method="POST" action="/tweets" id="new-tweet-form">
           <input name="text" id="tweet-text" placeholder="What are you humming about?" class="input-bar"></input>
           <div class="under-tweet">
