--- a/public/index.html
+++ b/public/index.html
@@ -35,30 +35,29 @@
     <nav>
       <span class="logo">Tweeter</span>
       <div>
-        <div class="new-tweet"><span class="bold">Write</span> a new tweet</div>
+        <div class="write-new-tweet"><span class="bold">Write</span> a new tweet</div>
         <div class="angles-down"><i class="fa-solid fa-angles-down"></i></div>
       </div>
     </nav>
-    <header>
+
+    <div class="header-and-main">
+    <header class="header">
       <div class="profile-img">
         <img src="/images/profile-hex.png"> 
       </div>
-      <br>
       <div class="profile-name">
-        <h2>Your Name</h2>
+        <h2><span class="bold">Juntao</span> Liu</h2>
       </div>
     </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
 
-      
-
       <section class="new-tweet">
         <div class="error-message"></div>
         <form method="POST" action="/tweets" id="new-tweet-form">
           <input name="text" id="tweet-text" placeholder="What are you humming about?" class="input-bar"></input>
-          <div class="under-tweet">
+          <div class="under-input">
             <button class="tweet-btn" type="submit">Tweet</button>
             <p name="counter" class="counter" for="tweet-text">140</p>
           </div>
@@ -66,30 +65,11 @@
       </section>
 
       <!--Existing tweet containers-->
-      <section id="tweets-container">
-        <!-- <div class="tweet-container">
-          <div class="tweet-user">
-            <div class="tweet-user-name">
-              <img class="image" src="https://i.imgur.com/73hZDYK.png"></img>
-              <p class="username">Newton</p>
-            </div>
-            <div class="tweet-user-id">
-              <p>@SirIssac</p>
-            </div>
-          </div>
-          <article class="tweet">If I have seen further, it is by standing on the shoulders of giants.</article>
-          <footer>
-            <div>10 days ago</div>
-            <div class="small-icons">
-              <a><i class="fa-solid fa-flag"></i></a>
-              <a><i class="fa-solid fa-repeat"></i></a>
-              <a><i class="fa-solid fa-heart"></i></a>
-            </div>
-          </footer>
-        </div> -->
-      </section>
+      <section id="tweets-container"></section>
+
       <!--New button-->
-      <button id="go-up-button"><i class="fa-solid fa-chevron-up"></i></button>
+      <button class="go-up-button"><i class="fa-solid fa-chevron-up"></i></button>
     </main>
+    </div>
   </body>
 </html>
